OO-4439: add same metadata general, item analyse, technical as in pool